--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 15:05:02 2018</p>
+         Last Run: Sat Nov 10 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>15</td>
-                        <td>67</td>
+                        <td>16</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -45,8 +45,8 @@
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>9</td>
-                        <td>66</td>
+                        <td>13</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
@@ -58,11 +58,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>33</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "9",
+                 "16",
+                 "13",
                  "33"
                ]
              },
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "68",
                  "67",
-                 "66",
-                 "67"
+                 "68"
                ]
              },
              {
@@ -184,7 +184,241 @@
                "data":[
                  "74",
                  "82",
-                 "89"
+                 "90"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Percentage (%)', display: true},
+                             ticks: {
+                                 beginAtZero: true
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'bar',
+                     data: data,
+                     options: options
+                  });
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Sat Nov 10 16:05:02 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>08:00 AM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-5</td>
+                        <td>2</td>
+                        <td>67</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>43</td>
+                     </tr>
+                     <tr>
+                        <td>09:00 AM</td>
+                        <td>Partly Cloudy</td>
+                        <td>1</td>
+                        <td>-2</td>
+                        <td>2</td>
+                        <td>58</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>45</td>
+                     </tr>
+                     <tr>
+                        <td>10:00 AM</td>
+                        <td>Partly Cloudy</td>
+                        <td>3</td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>52</td>
+                        <td>0</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>45</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 AM</td>
+                        <td>Partly Cloudy</td>
+                        <td>4</td>
+                        <td>2</td>
+                        <td>2</td>
+                        <td>49</td>
+                        <td>1</td>
+                        <td>10</td>
+                        <td>SW</td>
+                        <td>45</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator3"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator3").getContext("2d");
+                  var data ={
+           "labels":[
+             "08:00 AM",
+             "09:00 AM",
+             "10:00 AM",
+             "11:00 AM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "borderColor":"rgba(92,0,141,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(92,0,141,1)",
+               "backgroundColor":"rgba(92,0,141,0)",
+               "data":[
+                 "-5",
+                 "-2",
+                 "1",
+                 "2"
+               ]
+             },
+             {
+               "label":"temperature",
+               "borderColor":"rgba(252,49,18,1)",
+               "borderWidth":2,
+               "pointColor":"rgba(252,49,18,1)",
+               "backgroundColor":"rgba(252,49,18,0)",
+               "data":[
+                 "-2",
+                 "1",
+                 "3",
+                 "4"
+               ]
+             }
+           ]
+         };
+                  var options = {
+                     legend: {
+                         position: 'right'
+                     },
+                     scales: {
+                         xAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Date/Time', display: true},
+                             ticks: {
+                                 autoSkip: false
+                             }
+                         }],
+                         yAxes: [{
+                             display: true,
+                             scaleLabel: {labelString: 'Temp (C)', display: true},
+                             ticks: {
+                                 beginAtZero: false
+                             }
+                         }]
+                     },
+                     tooltips: {
+                         mode: 'index'
+                     }
+                  };
+                  var MyNewChart = new Chart(ctx, {
+                     type: 'line',
+                     data: data,
+                     options: options
+                  });
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator4"></canvas></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+               <script>
+                  var ctx = document.getElementById("chartHTMLReportGenerator4").getContext("2d");
+                  var data ={
+           "labels":[
+             "08:00 AM",
+             "09:00 AM",
+             "10:00 AM",
+             "11:00 AM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "borderColor":"rgba(0,0,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "2",
+                 "2",
+                 "2",
+                 "2"
+               ]
+             },
+             {
+               "label":"humidity",
+               "borderColor":"rgba(40,177,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "67",
+                 "58",
+                 "52",
+                 "49"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "borderColor":"rgba(233,37,255,1)",
+               "borderWidth":2,
+               "backgroundColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "43",
+                 "45",
+                 "45",
+                 "45"
                ]
              }
            ]
