--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 16:05:02 2018</p>
+         Last Run: Sat Nov 10 17:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,36 +33,36 @@
                         <td>Mostly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>16</td>
-                        <td>68</td>
+                        <td>17</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>74</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>13</td>
-                        <td>67</td>
+                        <td>7</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>82</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Overcast</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>33</td>
-                        <td>68</td>
+                        <td>8</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>90</td>
+                        <td>94</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
-                 "13",
-                 "33"
+                 "17",
+                 "7",
+                 "8"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "67",
-                 "68"
+                 "69",
+                 "69",
+                 "70"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "74",
-                 "82",
-                 "90"
+                 "79",
+                 "87",
+                 "94"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 16:05:02 2018</p>
+         Last Run: Sat Nov 10 17:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -247,13 +247,13 @@
                         <td>08:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>-2</td>
-                        <td>-5</td>
+                        <td>-6</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>66</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>43</td>
+                        <td>44</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -261,35 +261,35 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Partly Cloudy</td>
                         <td>3</td>
-                        <td>1</td>
-                        <td>2</td>
-                        <td>52</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>2</td>
+                        <td>51</td>
+                        <td>0</td>
+                        <td>10</td>
                         <td>SW</td>
-                        <td>45</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Partly Cloudy</td>
-                        <td>4</td>
-                        <td>2</td>
+                        <td>5</td>
+                        <td>3</td>
                         <td>2</td>
                         <td>49</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>45</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,10 +317,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-6",
                  "-2",
-                 "1",
-                 "2"
+                 "0",
+                 "3"
                ]
              },
              {
@@ -333,7 +333,7 @@
                  "-2",
                  "1",
                  "3",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -403,9 +403,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "58",
-                 "52",
+                 "66",
+                 "57",
+                 "51",
                  "49"
                ]
              },
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "43",
-                 "45",
-                 "45",
-                 "45"
+                 "44",
+                 "46",
+                 "47",
+                 "47"
                ]
              }
            ]
