--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 22:05:05 2018</p>
+         Last Run: Sat Nov 10 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 22:05:05 2018</p>
+         Last Run: Sat Nov 10 23:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -245,51 +245,51 @@
                   <tbody>
                      <tr>
                         <td>08:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-2</td>
                         <td>-5</td>
-                        <td>2</td>
-                        <td>67</td>
+                        <td>3</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>42</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>1</td>
                         <td>-2</td>
-                        <td>1</td>
-                        <td>58</td>
+                        <td>3</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>44</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>1</td>
-                        <td>53</td>
+                        <td>2</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>45</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>50</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>45</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -391,10 +391,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "3",
+                 "3",
                  "2",
-                 "1",
-                 "1",
-                 "1"
+                 "2"
                ]
              },
              {
@@ -403,9 +403,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "67",
-                 "58",
-                 "53",
+                 "71",
+                 "61",
+                 "54",
                  "50"
                ]
              },
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "42",
-                 "44",
-                 "45",
-                 "45"
+                 "19",
+                 "21",
+                 "22",
+                 "23"
                ]
              }
            ]
