--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 23:05:06 2018</p>
+         Last Run: Sun Nov 11 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,11 +30,11 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Chance of Rain</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>15</td>
-                        <td>68</td>
+                        <td>35</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
@@ -42,26 +42,26 @@
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>4</td>
-                        <td>68</td>
+                        <td>37</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>85</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Overcast</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>6</td>
-                        <td>69</td>
+                        <td>24</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>92</td>
                      </tr>
                   </tbody>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "15",
-                 "4",
-                 "6"
+                 "35",
+                 "37",
+                 "24"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "68",
-                 "68",
-                 "69"
+                 "70",
+                 "69",
+                 "70"
                ]
              },
              {
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "77",
-                 "85",
+                 "84",
                  "92"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Nov 10 23:05:06 2018</p>
+         Last Run: Sun Nov 11 00:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-2</td>
                         <td>-5</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -403,7 +403,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
+                 "70",
                  "61",
                  "54",
                  "50"
