--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 00:05:04 2018</p>
+         Last Run: Sun Nov 11 01:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>35</td>
-                        <td>70</td>
+                        <td>67</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
@@ -46,19 +46,19 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>37</td>
-                        <td>69</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>84</td>
+                        <td>85</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Chance of Rain</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>24</td>
-                        <td>70</td>
+                        <td>33</td>
+                        <td>69</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
@@ -162,7 +162,7 @@
                "data":[
                  "35",
                  "37",
-                 "24"
+                 "33"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "69",
-                 "70"
+                 "67",
+                 "68",
+                 "69"
                ]
              },
              {
@@ -183,7 +183,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "77",
-                 "84",
+                 "85",
                  "92"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Nov 11 00:05:04 2018</p>
+         Last Run: Sun Nov 11 01:05:08 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -246,50 +246,50 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-2</td>
-                        <td>-5</td>
-                        <td>3</td>
-                        <td>70</td>
+                        <td>-4</td>
+                        <td>-8</td>
+                        <td>4</td>
+                        <td>72</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>SW</td>
-                        <td>19</td>
+                        <td>10</td>
+                        <td>SSW</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>-1</td>
+                        <td>-4</td>
                         <td>3</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>SW</td>
-                        <td>21</td>
+                        <td>10</td>
+                        <td>SSW</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>3</td>
-                        <td>0</td>
+                        <td>1</td>
+                        <td>-2</td>
                         <td>2</td>
                         <td>54</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>22</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>5</td>
                         <td>3</td>
-                        <td>2</td>
-                        <td>50</td>
+                        <td>0</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>51</td>
+                        <td>1</td>
+                        <td>11</td>
                         <td>SW</td>
-                        <td>23</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,10 +317,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5",
+                 "-8",
+                 "-4",
                  "-2",
-                 "0",
-                 "3"
+                 "0"
                ]
              },
              {
@@ -330,10 +330,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-4",
+                 "-1",
                  "1",
-                 "3",
-                 "5"
+                 "3"
                ]
              }
            ]
@@ -391,10 +391,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
+                 "4",
                  "3",
                  "2",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "61",
+                 "72",
+                 "62",
                  "54",
-                 "50"
+                 "51"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
                  "21",
-                 "22",
-                 "23"
+                 "17",
+                 "15",
+                 "13"
                ]
              }
            ]
